Freestyle + EEVEE render not working #58669

Closed
opened 2018-12-04 00:31:21 +01:00 by Franck VAISSIERE · 28 comments

System Information
Operating system: Arch Linux
Graphics card: core i5 3210M...

Blender Version
Broken : 2.80 beta, 2018-12-02 (and even since the first 2.80)
worked : 2.79

Short description of error
Can't render freestyle in eevee or workbench engine

Exact steps for others to reproduce the error
open a new file -> activate freestyle in scene settings -> render

**System Information** Operating system: Arch Linux Graphics card: core i5 3210M... **Blender Version** Broken : 2.80 beta, 2018-12-02 (and even since the first 2.80) worked : 2.79 **Short description of error** Can't render freestyle in eevee or workbench engine **Exact steps for others to reproduce the error** open a new file -> activate freestyle in scene settings -> render

Added subscriber: @fr1kv6r

Added subscriber: @fr1kv6r

#59128 was marked as duplicate of this issue

#59128 was marked as duplicate of this issue

#59430 was marked as duplicate of this issue

#59430 was marked as duplicate of this issue

#58827 was marked as duplicate of this issue

#58827 was marked as duplicate of this issue

Added subscriber: @user1

Added subscriber: @user1

Added subscriber: @Karmacop

Added subscriber: @Karmacop

Freestyle does work but I believe there are at least two issues:

  • Freestyle takes the mesh from the current view port only and doesn't update if an animation is rendered.
  • including/excluding collections isn't functioning correctly.
Freestyle does work but I believe there are at least two issues: - Freestyle takes the mesh from the current view port only and doesn't update if an animation is rendered. - including/excluding collections isn't functioning correctly.

Added subscriber: @AfterMat

Added subscriber: @AfterMat
Added subscribers: @J.Manyway, @brettkromkamp, @hubert, @daniel.vanwesten
Brecht Van Lommel changed title from Can't render freestyle anymore in 2.80 :( to Freestyle + EEVEE render not working 2018-12-18 16:00:50 +01:00

Added subscriber: @piacenti

Added subscriber: @piacenti

Added subscriber: @henryschreiner

Added subscriber: @henryschreiner

If you open a new file, activate freestyle, then render, the image turns black when freestyle runs. If you switch to 'relative' line thickness mode, it segfaults blender instead. Changing to Cycles fixes the problem (though freestyle is quite slow on cycles, just like 2.7).

Using macOS and a recent build.

If you open a new file, activate freestyle, then render, the image turns black when freestyle runs. If you switch to 'relative' line thickness mode, it segfaults blender instead. Changing to Cycles fixes the problem (though freestyle is quite slow on cycles, just like 2.7). Using macOS and a recent build.

Added subscriber: @capnm

Added subscriber: @capnm

This issue was referenced by 808510325e

This issue was referenced by 808510325efbd75391afd1fdf3eea31489a52daf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Now I get a segfault instead of a black render when opening a new file, activating freestyle, then rendering. Still macOS.

Now I get a segfault instead of a black render when opening a new file, activating freestyle, then rendering. Still macOS.

Works correctly for me with Windows 10.

Works correctly for me with Windows 10.

Now I get a segfault instead of a black render when opening a new file, activating freestyle, then rendering. Still macOS.

This can be a driver problem, submit a new bugreport?
Works perfectly also in Linux:
0001-0065-eeiee.mp4

> Now I get a segfault instead of a black render when opening a new file, activating freestyle, then rendering. Still macOS. This can be a driver problem, submit a new bugreport? Works perfectly also in Linux: [0001-0065-eeiee.mp4](https://archive.blender.org/developer/F6182236/0001-0065-eeiee.mp4)

working for me too even on "old" 2.79 project files.
Thank you very much !

Operating system: Arch Linux
Graphics card: core i5 3210M...

working for me too even on "old" 2.79 project files. Thank you very much ! Operating system: Arch Linux Graphics card: core i5 3210M...

Nevermind, if I load factory defaults, the current default works fine with freestyle. Something is wrong with how the collections interact with freeing FreeStyle in the old file. (There might be a bug hidden in here, but it could just be a bug in the old defaults file). Thanks for fixing this by the way, it's great!

Nevermind, if I load factory defaults, the current default works fine with freestyle. Something is wrong with how the collections interact with freeing FreeStyle in the old file. (There might be a bug hidden in here, but it could just be a bug in the old defaults file). Thanks for fixing this by the way, it's great!

Added subscriber: @StanislavOvcharov

Added subscriber: @StanislavOvcharov

Added subscriber: @jaggz

Added subscriber: @jaggz

In 2.80 (git built within the week (168a6a4bfc)).
Linux (Debian stable).
Official Nvidia drivers. Geforce 970. Driver Version: 390.48

(New project or existing objects appended from a 2.79 project.)
Freestyles then enabled.

...Results in a black render. The render layer also appears black in the compositor -- and only when Freestyles is enabled -- the objects show fine when freestyles is disabled.
I'm not sure if other nvidia information would be helpful or not. I can paste the nvidia-settings data for GLX/OpenGL if it helps.

.blend is attached.
eevee-freestyle-blackens-render.blend

In 2.80 (git built within the week (168a6a4bfc1)). Linux (Debian stable). Official Nvidia drivers. Geforce 970. Driver Version: 390.48 (New project or existing objects appended from a 2.79 project.) Freestyles then enabled. ...Results in a black render. The render layer also appears black in the compositor -- and only when Freestyles is enabled -- the objects show fine when freestyles is disabled. I'm not sure if other nvidia information would be helpful or not. I can paste the nvidia-settings data for GLX/OpenGL if it helps. .blend is attached. [eevee-freestyle-blackens-render.blend](https://archive.blender.org/developer/F6429416/eevee-freestyle-blackens-render.blend)

Added subscriber: @brecht

Added subscriber: @brecht

@jaggz, 168a6a4bfc is too old.

@jaggz, 168a6a4bfc is too old.

Updating blender2.8 -> master in my local repo, and rebuilding, showed the problem is resolved. :)

Updating blender2.8 -> master in my local repo, and rebuilding, showed the problem is resolved. :)

Added subscriber: @seancai110

Added subscriber: @seancai110

In #58669#594388, @henryschreiner wrote:
Nevermind, if I load factory defaults, the current default works fine with freestyle. Something is wrong with how the collections interact with freeing FreeStyle in the old file. (There might be a bug hidden in here, but it could just be a bug in the old defaults file). Thanks for fixing this by the way, it's great!

I have the same problem when I opened old 2.79 file with 2.8. Though, I find a simple way solve it.
Just create a new render layer(view layer) in 2.8, and delete old render layer.

> In #58669#594388, @henryschreiner wrote: > Nevermind, if I load factory defaults, the current default works fine with freestyle. Something is wrong with how the collections interact with freeing FreeStyle in the old file. (There might be a bug hidden in here, but it could just be a bug in the old defaults file). Thanks for fixing this by the way, it's great! I have the same problem when I opened old 2.79 file with 2.8. Though, I find a simple way solve it. Just create a new render layer(view layer) in 2.8, and delete old render layer.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58669
No description provided.