Fix T58669, T59772: freestyle + EEVEE render not working.