source/blender/freestyle/intern/blender_interface/BlenderStrokeRenderer.cpp
@@ -126,8 +126,10 @@ BlenderStrokeRenderer::BlenderStrokeRenderer(Render *re, int render_count) : Str
 		freestyle_scene->id.properties = IDP_CopyProperty_ex(old_scene->id.properties, 0);
 	}
 
+	/* Render with transparent background. */
+	freestyle_scene->r.alphamode = R_ALPHAPREMUL;
+
 	if (STREQ(freestyle_scene->r.engine, RE_engine_id_CYCLES)) {
-		/* Render with transparent background. */
 		PointerRNA freestyle_scene_ptr;
 		RNA_id_pointer_create(&freestyle_scene->id, &freestyle_scene_ptr);
 		PointerRNA freestyle_cycles_ptr = RNA_pointer_get(&freestyle_scene_ptr, "cycles");
